WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
273280
inputNormalizeEdgesTransparent blur isn't available on all platforms
https://bugs.webkit.org/show_bug.cgi?id=273280
Summary
inputNormalizeEdgesTransparent blur isn't available on all platforms
Matt Woodrow
Reported
2024-04-25 15:36:40 PDT
<
rdar://126606399
> We currently try to set this everywhere, but the key isn't always available. We should use inputHardEdges instead, but since this looks worse, we should try to use inputNormalizeEdges when we know the blurred area is opaque.
Attachments
Add attachment
proposed patch, testcase, etc.
Matt Woodrow
Comment 1
2024-04-25 15:44:26 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/27770
EWS
Comment 2
2024-04-29 22:38:21 PDT
Committed
278155@main
(85a241ca1e5f): <
https://commits.webkit.org/278155@main
> Reviewed commits have been landed. Closing PR #27770 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug